--- a/SailorWeb/Web.config
+++ b/SailorWeb/Web.config
@@ -16,8 +16,8 @@
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultDbContext" connectionString="Data Source=114.215.121.173;port=3306;Initial Catalog=Ship;User ID=root;Password=root;" providerName="MySql.Data.MySqlClient" />-->
-    <add name="DefaultDbContext" connectionString="Data Source=localhost;Initial Catalog=Ship;User ID=sa;Password=Ink@Soft;" providerName="System.Data.SqlClient" />
-    <add name="IdentityConnection" connectionString="Data Source=localhost;Initial Catalog=Identity;Persist Security Info=True;User ID=sa;Password=Ink@Soft" providerName="System.Data.SqlClient" />
+    <add name="DefaultDbContext" connectionString="Data Source=localhost;Initial Catalog=Ship;User ID=sa;Password=123456;" providerName="System.Data.SqlClient" />
+    <add name="IdentityConnection" connectionString="Data Source=localhost;Initial Catalog=Identity;Persist Security Info=True;User ID=sa;Password=123456" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
