--- a/Ship.Web/appsettings.json
+++ b/Ship.Web/appsettings.json
@@ -1,7 +1,12 @@
 {
+  "ConnectionStrings": {
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Ship;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Trace",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*"
