--- a/Ship.Web/Ship.Web.csproj
+++ b/Ship.Web/Ship.Web.csproj
@@ -16,6 +16,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.11" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore.Design" Version="8.0.11" />
+    <PackageReference Include="nlog" Version="4.5.7" />
+    <PackageReference Include="nlog.web.aspnetcore" Version="4.5.4" />
     <PackageReference Include="X.PagedList.Mvc.Core" Version="7.5.0" />
   </ItemGroup>
 
@@ -26,6 +28,12 @@
 
   <ItemGroup>
     <Folder Include="Views\UploadFile\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
