--- a/Ship.Infrastructure/Ship.Infrastructure.csproj
+++ b/Ship.Infrastructure/Ship.Infrastructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.1.1" />
     <PackageReference Include="microsoft.aspnetcore.razor" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
+    <PackageReference Include="microsoft.entityframeworkcore.relational" Version="2.1.1" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
   </ItemGroup>
 
