--- a/Ship.Web/appsettings.json
+++ b/Ship.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=Identity;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Ship;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "IdentityConnection": "Server=localhost;Port=3306;Database=Identity;User=root;Password=root;SslMode=None",
+    "DefaultConnection": "Server=localhost;Port=3306;Database=Ship;User=root;Password=root;SslMode=None"
   },
   "Logging": {
     "LogLevel": {
