--- a/Ship.Web/Ship.Web.csproj
+++ b/Ship.Web/Ship.Web.csproj
@@ -14,10 +14,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.11" />
-    <PackageReference Include="MySql.Data.EntityFrameworkCore.Design" Version="8.0.11" />
     <PackageReference Include="nlog" Version="4.5.7" />
     <PackageReference Include="nlog.web.aspnetcore" Version="4.5.4" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
     <PackageReference Include="X.PagedList.Mvc.Core" Version="7.5.0" />
   </ItemGroup>
 
